# odil04

./: .gitignore  CMakeLists.txt  README.md  main.cpp  resources.qrc
src/drawing/: paintscene.cpp  paintscene.h  painttable.cpp  painttable.h
src/shapes/: circle.cpp  circle.h  figure.cpp  figure.h  line.cpp  line.h  rectangle.cpp  rectangle.h  triangle.cpp  triangle.h
src/ui/: about.cpp  about.h  about.ui  messagedialog.cpp  messagedialog.h  messagedialog.ui  paintwindow.cpp  paintwindow.h  paintwindow.ui  welcomewindow.cpp  welcomewindow.h  welcomewindow.ui
src/utils/: commands.cpp  commands.h  json_utilities.cpp  json_utilities.h
